--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,10 +1,9 @@
 $bp-max-mobile: 1280px;
 
-$color-white: #EDDDE6;
+$color-white: #eddde6;
 $color-dark: #000000;
-$color-pink: #FF008F;
-$color-blue: #0D15AB;
-$color-yellow: #CBE510;
-$color-orange: #EE5325;
+$color-pink: #ff008f;
+$color-blue: #0d15ab;
+$color-yellow: #cbe510;
+$color-orange: #ee5325;
 $color-bg: #000000;
-
