--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,8 +1,8 @@
 @import 'variables';
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'typography';
 
 @font-face {
   font-family: 'FiraSansExtraCondensed';
@@ -60,170 +60,15 @@ input[type='number']::-webkit-inner-spin-button {
   display: none;
 }
 
-a {
-  color: inherit;
-  text-decoration: unset;
-}
-
 .container {
   max-width: 1400px;
   margin: 0 auto;
   position: relative;
 }
 
-h1,
-h2,
-h3,
-.h1-huge {
-  font-family: FiraSansExtraCondensed;
-}
-
-h1,
-h2,
-h3,
-p {
-  margin: 0;
-}
-
-@layer base {
-  @screen mobile {
-  }
-}
-
-.h1 {
-  font-size: 270px;
-  line-height: 204px;
-  letter-spacing: -0.03em;
-}
-.h1-huge {
-  font-size: 334px;
-  line-height: 260px;
-  letter-spacing: -0.03em;
-}
-
-h2 {
-  font-size: 186px;
-  line-height: 144px;
-  letter-spacing: -0.03em;
-}
-
-h3 {
-  font-size: 72px;
-  line-height: 68px;
-  letter-spacing: -0.02em;
-}
-
-.p1,
-.p2,
-.p3,
-.p3-text {
-  letter-spacing: -0.03em;
-}
-.p1 {
-  font-size: 32px;
-  line-height: 32px;
-}
-
-.p2 {
-  font-size: 28px;
-  line-height: 32px;
-}
-
-.p3 {
-  font-size: 24px;
-  line-height: 24px;
-}
-
-.p3-text {
-  font-size: 24px;
-  line-height: 28px;
-}
-
-button,
-.button-text {
-  font-size: 36px;
-  line-height: 32px;
-  letter-spacing: -0.03em;
-}
-
-.caption {
-  font-size: 18px;
-  line-height: 20px;
-  letter-spacing: 0em;
-}
-
-.caption-2 {
-  font-size: 16px;
-  line-height: 20px;
-  letter-spacing: 0em;
-}
-
-.subtitle {
-  font-size: 20px;
-  line-height: 20px;
-
-  letter-spacing: -0.03em;
-}
-
-.policys-text {
-  font-size: 20px;
-  line-height: 28px;
-  letter-spacing: -0.01em;
-}
-
 @screen mobile {
   .container {
-    max-width: 100%;
-    padding: 0 20px;
-  }
-  .h1 {
-    font-size: 68px;
-    line-height: 60px;
-  }
-  .h1-huge {
-    font-size: 88px;
-    line-height: 72px;
-    letter-spacing: -0.02em;
-  }
-
-  h2 {
-    font-size: 52px;
-    line-height: 44px;
-  }
-
-  h3 {
-    font-size: 40px;
-    line-height: 40px;
-  }
-
-  .p1 {
-    font-size: 20px;
-    line-height: 24px;
-  }
-
-  .p2 {
-    font-size: 24px;
-    line-height: 28px;
-  }
-  .p3 {
-    font-size: 16px;
-    line-height: 20px;
-  }
-
-  button,
-  .button-text {
-    font-size: 18px;
-    line-height: 16px;
-    letter-spacing: 0em;
-  }
-
-  .caption {
-    font-size: 14px;
-    line-height: 16px;
-  }
-
-  .policys-text {
-    font-size: 16px;
-    line-height: 24px;
+    max-width: 336px;
+    width: 100%;
   }
 }
