--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -67,6 +67,10 @@ input[type='number']::-webkit-inner-spin-button {
 }
 
 @screen mobile {
+  html {
+    max-width: 100vw;
+    overflow-x: hidden;
+  }
   .container {
     max-width: 336px;
     width: 100%;
