--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -56,6 +56,10 @@
   .p3-text {
     font-size: 24px;
     line-height: 28px;
+    @screen mobile {
+      font-size: 16px;
+      line-height: 20px;
+    }
   }
 
   .button-text {
